# story-dreamers

./: .gitignore  README.md
backend/: README.md  fetch_images.py  main.py  prompt_extractor.py  pyproject.toml  requirements.txt  serve.py  test.py  test2.py
backend/auth/: EMPTY
backend/dtos/: Payload.py
backend/serivces/: stable_diffusion_consumer.py
backend/services/: prompt_extractor.py  stable_diffusion_consumer.py
backend/test/: prompt_extractor_test.py
backend/test-books/: bambi.txt  cinderella.txt  haensel.txt
backend/test/test-data/: snowwhite-test.txt
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
frontend/public/fake-responses/: 001.json  002.json  003.json  text-processing.json
frontend/src/: App.svelte  app.css
frontend/src/lib/: api.ts  asyncDerived.ts  stores.ts
frontend/src/lib/components/: Booklet.svelte  Button.svelte  Loading.svelte  Page.svelte  Story.svelte  Textinput.svelte
test-books/: golden-goose.txt  snowwhite.txt
