[tool.poetry]
name = "story-dreamers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "story_dreamers"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
